creusot/tests/should_fail/prusti/partial_zombie/specific_impl.stderr
error: binary operation `==` cannot be applied to type `(creusot_contracts::prusti::Zombie<Test<std::boxed::Box<u32>>>, Test<u32>)` since it doesn't implement `SnapEq`
  --> specific_impl.rs:20:11
   |
20 | #[ensures(x == x)]
   |           ^

error: aborting due to 1 previous error

